// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my header component should render correctly when NOT authenticated 1`] = `
<header
  className="header"
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        className="header__title"
        replace={false}
        to="/"
      >
        <h1>
          title
        </h1>
      </Link>
      <div
        className="header__nav"
      >
        <Link
          className="header__nav__item"
          replace={false}
          to="/login"
        >
          menu.login
        </Link>
      </div>
    </div>
  </div>
</header>
`;

exports[`my header component should render correctly when authenticated 1`] = `
<header
  className="header"
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        className="header__title"
        replace={false}
        to="/dashboard"
      >
        <h1>
          title
        </h1>
      </Link>
      <div
        className="header__nav"
      >
        <NavLink
          activeClassName="header__nav__item--active"
          ariaCurrent="true"
          className="header__nav__item"
          to="/add"
        >
          transactions.add_transaction
        </NavLink>
        <div
          className="profile has-dropdown"
        >
          <img
            alt=""
            className="profile__picture"
            src="foo.png"
          />
          <div
            className="dropdown-menu"
          >
            <div
              className="dropdown-menu__header"
            >
              <strong>
                user.account
              </strong>
            </div>
            <Link
              className="dropdown-menu__item"
              replace={false}
              to="/profile"
            >
              user.profile
            </Link>
            <Link
              className="dropdown-menu__item logout"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              user.logout
            </Link>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;
